# Field-Access-Proxy

./: CITATION.cff  CMakeLists.txt  README.md
.github/workflows/: cmake-gtest.yaml
include/field_access_proxy/: field_access_proxy.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  c_style_tests.cpp  endian.h  macro_defined_tests.cpp
